--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NEXT_PUBLIC_BACKEND_URL=apis.economicexpressbd.com
 NEXT_PUBLIC_API=//apis.economicexpressbd.com/public/api
 NEXT_PUBLIC_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME="Shakil's Blog"
+NODE_ENV='production'
